[gd_scene load_steps=11 format=3 uid="uid://dkrewxtxg7v7j"]

[ext_resource type="Script" uid="uid://dh5pqpc2d0l8x" path="res://main-menu/mainmenuscene/script/main_menu.gd" id="1_1u3ec"]
[ext_resource type="Theme" uid="uid://cqmt4obqoeysj" path="res://main-menu/UI/panel_theme.tres" id="2_wt1xb"]
[ext_resource type="Texture2D" uid="uid://rt8qs3bs62m3" path="res://main-menu/UI/background.png" id="3_d8w1o"]
[ext_resource type="FontFile" uid="uid://cq850sbmqa2uk" path="res://main-menu/fonts/Jersey_25/Jersey25-Regular.ttf" id="4_d8w1o"]
[ext_resource type="FontFile" uid="uid://cs536msat0kkd" path="res://main-menu/fonts/Jersey_15/Jersey15-Regular.ttf" id="5_dvqgk"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ikcl0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ikcl0"]
bg_color = Color(0.910914, 0.920267, 0.952605, 0.941176)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ljn4s"]
bg_color = Color(0.770893, 0.801256, 0.983626, 1)
corner_radius_bottom_right = 25
corner_detail = 18

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w8h0y"]
bg_color = Color(0.776108, 0, 0.242115, 1)
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5x8rc"]
bg_color = Color(0.318526, 0.634612, 0.84207, 1)
draw_center = false

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -1.0
offset_right = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1u3ec")

[node name="Panel" type="Panel" parent="."]
material = SubResource("ShaderMaterial_ikcl0")
layout_mode = 1
anchors_preset = -1
anchor_right = 1.00941
anchor_bottom = 1.01093
offset_top = 3.0
offset_right = 0.159912
offset_bottom = 2.91998
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_wt1xb")
theme_override_styles/panel = SubResource("StyleBoxFlat_ikcl0")
metadata/_edit_use_anchors_ = true

[node name="Background" type="Sprite2D" parent="Panel"]
position = Vector2(580, 326)
scale = Vector2(0.608073, 0.613426)
texture = ExtResource("3_d8w1o")
metadata/_edit_lock_ = true

[node name="play_game_button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.607658
anchor_top = 0.635111
anchor_right = 0.607658
anchor_bottom = 0.635803
offset_left = -34.022
offset_top = -25.552
offset_right = 196.978
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.123506, 0.366944, 0.407805, 1)
theme_override_fonts/font = ExtResource("4_d8w1o")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_ljn4s")
text = "Start Game"
metadata/_edit_use_anchors_ = true

[node name="settings_button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.653212
anchor_top = 0.721309
anchor_right = 0.695472
anchor_bottom = 0.723765
offset_left = -85.5
offset_top = -25.408
offset_right = 93.816
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.0641819, 0.381346, 0.381345, 1)
theme_override_fonts/font = ExtResource("4_d8w1o")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_ljn4s")
text = "Settings"
metadata/_edit_use_anchors_ = true

[node name="quit_game_button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.766059
anchor_top = 0.796296
anchor_right = 0.766059
anchor_bottom = 0.796296
offset_left = -216.5
offset_top = -15.9998
offset_right = 11.5001
offset_bottom = 38.0002
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_d8w1o")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_w8h0y")
text = "Quit Game"

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 313.0
offset_top = 183.0
offset_right = 1179.0
offset_bottom = 327.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("5_dvqgk")
theme_override_font_sizes/normal_font_size = 90
theme_override_styles/normal = SubResource("StyleBoxFlat_5x8rc")
bbcode_enabled = true
text = "Interstellar Apes"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 309.0
offset_top = 182.0
offset_right = 1152.0
offset_bottom = 306.0
theme_override_fonts/normal_font = ExtResource("5_dvqgk")
theme_override_font_sizes/normal_font_size = 90
theme_override_styles/normal = SubResource("StyleBoxFlat_5x8rc")
bbcode_enabled = true
text = "Interstellar Apes"

[connection signal="pressed" from="play_game_button" to="." method="_on_play_game_button_pressed"]
[connection signal="pressed" from="settings_button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="quit_game_button" to="." method="_on_quit_game_button_pressed"]
